--- a/upload/build.xml
+++ b/upload/build.xml
@@ -1,5 +1,5 @@
 <project name="Sample usage of Salesforce Ant tasks" default="test" basedir="." xmlns:sf="antlib:com.salesforce">
-
+<!-- there is a difference now -->
     <property file="build.properties"/>
     <property environment="env"/>
 
